fix: font size on tablet

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1178,10 +1178,6 @@ $bg-fourtiary: #e5dcd3;
           max-width: 46%;
         }
       }
-
-      &__description {
-        font-size: 22px;
-      }
     }
 
     .es .es-steps {
